--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.0.4",
+    "@tabler/icons-react": "^3.30.0",
+    "@types/three": "^0.173.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.5",
-    "motion": "^12.4.5",
+    "motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.1"
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.0.2",
+    "three": "^0.173.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
