--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "export": "next export",
-    "predeploy": "npm run build && npm run export"
+    "predeploy": "npm run build && npm run export",
     "start": "next start",
     "lint": "next lint"
   },
