--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # or "master", depending on your branch name
+      - main  # or your default branch
 
 permissions:
   contents: write
@@ -23,13 +23,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build and export static site
-        run: npm run build && npm run export
+      - name: Build static site
+        run: npm run build
 
-      - name: Deploy to <your_USER>.github.io
+      - name: Deploy to ftadev.github.io
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
-          publish_branch: main  # or another branch used by <your_USER>.github.io repo
+          publish_branch: main  # branch of your <user>.github.io repo
           external_repository: ftadev/ftadev.github.io
