--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
           publish_dir: ./out
-          publish_branch: main  # branch of your <user>.github.io repo
+          publish_branch: master
           external_repository: ftadev/ftadev.github.io
